Change gender-information and add learned

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<div class="item-box about-me-box">
 					<p>住所：大阪</p>
 					<p>年齢：34歳</p>
-					<p>性別：男</p>
+					<p>性別：男性</p>
 				</div>
 			</div>
 			<div class="clear"></div>
@@ -97,7 +97,7 @@
 						<div class="learned-listarea">
 							<div class="learned-list"><div class="learned-list-day">2018.09.23</div><a class="learned-list-text" href="https://note.mu/take555/n/n0585957adcc5">note始めました</a></div>
 							<div class="learned-list"><div class="learned-list-day">2018.09.30</div><a class="learned-list-text" href="https://note.mu/take555/n/n95d9170a6331">ProgateのjQueryコース（勝手に）修了試験</a></div>
-							<div class="learned-list"><div class="learned-list-day">2018.--.--</div><a class="learned-list-text" href="#">（もっと増える予定）</a></div>
+							<div class="learned-list"><div class="learned-list-day">2018.10.08</div><a class="learned-list-text" href="https://note.mu/take555/n/n7684631b27ba">Git、GitHubの使い方について</a></div>
 						</div>
 					</div>
 				</div>
