Add Darts to I can teach

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 					<span class="item-title">I can teach...</span>
 					<div class="item-box can-box">
 						<p>数学</p>
+						<p>ダーツ</p>
 					</div>
 				</div>
 			</div>
