Add 'I want to learn...'

--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
 					<span class="item-title">I want to learn...</span>
 					<div class="item-box want-box">
 						<p>デザイン</p>
-						<p>Webページのレイアウトのコツ</p>
+						<p>Webページの設計のコツ</p>
+						<p>emとかvhとかの単位の話</p>
+						<p>Gitの上手な使い方</p>
+						<p>PowerShellとは</p>
 					</div>
 				</div>
 				<div class="item can-item">
