--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 							<div class="learned-list"><div class="learned-list-day">2018.09.23</div><a class="learned-list-text" href="https://note.mu/take555/n/n0585957adcc5">note始めました</a></div>
 							<div class="learned-list"><div class="learned-list-day">2018.09.30</div><a class="learned-list-text" href="https://note.mu/take555/n/n95d9170a6331">ProgateのjQueryコース（勝手に）修了試験</a></div>
 							<div class="learned-list"><div class="learned-list-day">2018.10.08</div><a class="learned-list-text" href="https://note.mu/take555/n/n7684631b27ba">Git、GitHubの使い方について</a></div>
+							<div class="learned-list"><div class="learned-list-day">2018.10.08</div><a class="learned-list-text" href="https://note.mu/take555/n/n0e9d3d539149">Flexboxについて</a></div>
 						</div>
 					</div>
 				</div>
