--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
 						<p class="progress-cell progress-area"><progress class="progress-bar" value="10" max="100"></progress></p>
 					</div>
 					<div class="progress-row">
+						<p class="progress-cell study">制作：jQuery実装</p>
+						<p class="progress-cell goal">目標：20部品</p>
+						<p class="progress-cell parcentage">5%</p>
+						<p class="progress-cell progress-area"><progress class="progress-bar" value="5" max="100"></progress></p>
+					</div>
+					<div class="progress-row">
+						<p class="progress-cell study">制作：PHP実装</p>
+						<p class="progress-cell goal">目標：20部品</p>
+						<p class="progress-cell parcentage">0%</p>
+						<p class="progress-cell progress-area"><progress class="progress-bar" value="0" max="100"></progress></p>
+					</div>
+					<div class="progress-row">
 						<p class="progress-cell study">学習：レイアウトデザイン</p>
 						<p class="progress-cell goal">目標：関連本3冊</p>
 						<p class="progress-cell parcentage">0%</p>
