Add new category 'Coming soon...'

--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
 			<div class="clear"></div>
 		</div>
 	</div>
+	<div class="bottom2-wrapper">
+		<div class="container">
+			<div class="item memo-item">
+				<span class="item-title">Coming soon...</span>
+				<div class="item-box memo-box">
+					<p>PHPで追記作業自動化</p>
+					<p>jQueryで何か動きを付ける</p>
+					<p>良いと思ったサイトリスト</p>
+				</div>
+			</div>
+		</div>
+	</div>
 	<footer>
 		<div class="container">
 			<p>Take555</p>
